# astrotypes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: DoxyfileAPI.in  doxygen.cmake  git_version.cmake
doc/: cmake_conventions.md  developers_guide.md  installation.md  mainpage.md  requirements.md
html/: AdvancedGuide_8md.html  Angle_8h.html  Angle_8h__dep__incl.map  Angle_8h__dep__incl.md5  Angle_8h__incl.map  Angle_8h__incl.md5  Angle_8h_source.html  BoostDurationCast_8cpp.html  BoostDurationCast_8cpp__dep__incl.map  BoostDurationCast_8cpp__dep__incl.md5  BoostDurationCast_8cpp_source.html  BoostDurationCast_8h.html  BoostDurationCast_8h__dep__incl.map  BoostDurationCast_8h__dep__incl.md5  BoostDurationCast_8h__incl.map  BoostDurationCast_8h__incl.md5  BoostDurationCast_8h_source.html  CONTRIBUTING_8md.html  CheatSheet_8md.html  CookBook_8md.html  DataBuffer_8cpp.html  DataBuffer_8cpp__incl.map  DataBuffer_8cpp__incl.md5  DataBuffer_8cpp_source.html  DataBuffer_8h.html  DataBuffer_8h__dep__incl.map  DataBuffer_8h__dep__incl.md5  DataBuffer_8h_source.html  DataFactory_8h.html  DataFactory_8h__dep__incl.map  DataFactory_8h__dep__incl.md5  DataFactory_8h__incl.map  DataFactory_8h__incl.md5  DataFactory_8h_source.html  DataRate_8h.html  (+5617 more)
src/cpp/: CMakeLists.txt
src/cpp/cmake/: boost.cmake  code_coverage.cmake  compiler_settings.cmake  dependencies.cmake  googletest.cmake  subpackage.cmake  valgrind.cmake  version.h.in
src/cpp/doc/: tutorial.md
src/cpp/pss/astrotypes/: .gitignore  CMakeLists.txt
src/cpp/pss/astrotypes/multiarray/: CMakeLists.txt  DataBuffer.h  DimensionIndex.h  DimensionSize.h  DimensionSpan.h  ExtendedMultiArray.h  IndexMapper.h  MultiArray.h  MultiIterator.h  NumericalRepresentation.h  OverlaySliceIterator.h  PointerAllocator.h  ResizeAdapter.h  Slice.h  SliceIterator.h  StandardAllocator.h  TypeTraits.h  View.h  ViewIterator.h
src/cpp/pss/astrotypes/multiarray/detail/: DataBuffer.cpp  DimensionIndex.cpp  DimensionSize.cpp  DimensionSpan.cpp  ExtendedMultiArray.cpp  IndexMapper.cpp  MultiArray.cpp  MultiIterator.cpp  OverlaySliceIterator.cpp  ReducedRankSlice.cpp  ReducedRankSlice.h  ResizeAdapter.cpp  Slice.cpp  SliceHelpers.h  SliceIterator.cpp  SlicePosition.cpp  SlicePosition.h  View.cpp  ViewIterator.cpp
src/cpp/pss/astrotypes/multiarray/test/: CMakeLists.txt  DataBufferTest.h  DimensionIndexTest.h  DimensionSizeTest.h  MultiArrayTest.h  ResizeAdapterTest.h  SliceTest.h  TestMultiArray.h
src/cpp/pss/astrotypes/multiarray/test/src/: DataBufferTest.cpp  DimensionIndexTest.cpp  DimensionSizeTest.cpp  MultiArrayTest.cpp  NumericalRepresentationTest.cpp  NumericalRepresentationTest.h  PointerAllocatorTest.cpp  PointerAllocatorTest.h  ResizeAdapterTest.cpp  SliceTest.cpp  StandardAllocatorTest.cpp  StandardAllocatorTest.h
src/cpp/pss/astrotypes/sigproc/: CMakeLists.txt  DataFactory.h  DefaultDataFactoryTraits.h  FileReader.h  Header.h  HeaderField.h  IStream.h  OStream.h  ResizeAdapter.h  SigProc.h  SigProcFormat.h  SigProcFormatAdapterSelector.h  SigProcHeader.h  SigProcVariable.h
src/cpp/pss/astrotypes/sigproc/detail/: .SigProcFormat.cpp.swp  FileReader.cpp  Header.cpp  HeaderBase.cpp  HeaderBase.h  HeaderField.cpp  HeaderFieldDataType.cpp  HeaderFieldDataType.h  IStream.cpp  ResizeAdapter.cpp  SigProcFormat.cpp  SigProcHeader.cpp  SigProcVariable.cpp  SigProcVariable.h
src/cpp/pss/astrotypes/sigproc/doc/: sigproc_tutorial.md
src/cpp/pss/astrotypes/sigproc/examples/: CMakeLists.txt  ExtendedHeader.h
src/cpp/pss/astrotypes/sigproc/examples/src/: ExtendedHeader.cpp  sigproc_cat.cpp  sigproc_find_null_spectra.cpp  sigproc_header.cpp
src/cpp/pss/astrotypes/sigproc/src/: Header.cpp  HeaderField.cpp  SigProcHeader.cpp  SigProcVariable.cpp
src/cpp/pss/astrotypes/sigproc/test/: CMakeLists.txt  FileReaderTest.h  HardCodedDataPath.h.in  HeaderTest.h  SigProcFormatTest.h  SigProcHeaderTest.h  SigProcTestFile.h  SigProcWriterTest.h
src/cpp/pss/astrotypes/sigproc/test/data/: filterbank_16bit.fil  filterbank_32bit.fil  filterbank_8bit.fil  readme
src/cpp/pss/astrotypes/sigproc/test/src/: .HeaderTest.cpp.swp  FileReaderTest.cpp  HeaderTest.cpp  SigProcFormatTest.cpp  SigProcHeaderTest.cpp  SigProcTestFile.cpp  SigProcWriterTest.cpp
src/cpp/pss/astrotypes/types/: CMakeLists.txt  ExtendedTimeFrequency.h  PhaseFrequencyArray.h  TimeFrequency.h  Utilities.h
src/cpp/pss/astrotypes/types/detail/: ExtendedTimeFrequency.cpp  PhaseFrequencyArray.cpp  TimeFrequency.cpp  Utilities.cpp
src/cpp/pss/astrotypes/types/doc/: time_frequency.md
src/cpp/pss/astrotypes/types/test/: CMakeLists.txt  ExtendedTimeFrequencyTest.h  PhaseFrequencyArrayTest.h  TimeFrequencyTest.h  UtilitiesTest.h
src/cpp/pss/astrotypes/types/test/src/: ExtendedTimeFrequencyTest.cpp  PhaseFrequencyArrayTest.cpp  TimeFrequencyTest.cpp  UtilitiesTest.cpp
src/cpp/pss/astrotypes/units/: Angle.h  BoostDurationCast.h  CMakeLists.txt  DataRate.h  DefineClock.h  DispersionMeasure.h  Frequency.h  J2000Clock.h  JulianClock.h  Length.h  ModifiedJulianClock.h  Phase.h  Quantity.h  Time.h  TimePoint.h  TimeUnits.h  Units.h  Utilities.h  cmath.h
src/cpp/pss/astrotypes/units/detail/: BoostDurationCast.cpp  Phase.cpp  Time.cpp  TimePoint.cpp
src/cpp/pss/astrotypes/units/doc/: units.md
src/cpp/pss/astrotypes/units/src/: J2000Clock.cpp  JulianClock.cpp  ModifiedJulianClock.cpp
src/cpp/pss/astrotypes/units/test/: CMakeLists.txt  JulianClockTest.h  ModifiedJulianClockTest.h  PhaseTest.h  TimePointTest.h  TimeTest.h  UnitsTest.h  UtilitiesTest.h
src/cpp/pss/astrotypes/units/test/src/: JulianClockTest.cpp  ModifiedJulianClockTest.cpp  PhaseTest.cpp  TimePointTest.cpp  TimeTest.cpp  UnitsTest.cpp  UtilitiesTest.cpp
src/cpp/pss/astrotypes/utils/: CMakeLists.txt  CompilerInfo.h  ModuloOne.h  Optional.h  TypeTraits.h
src/cpp/pss/astrotypes/utils/detail/: ModuloOne.cpp  Optional.cpp
src/cpp/pss/astrotypes/utils/test/: CMakeLists.txt  ModuloOneTest.h  OptionalTest.h
src/cpp/pss/astrotypes/utils/test/src/: ModuloOneTest.cpp  OptionalTest.cpp
src/cpp/tools/: class
(+159 files in other folders)
